--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "1.0.6",
+    "@metamask/providers": "^10.2.1",
     "@next/font": "13.1.1",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "18.11.18",
@@ -18,6 +19,7 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "ethers": "^5.7.2",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
