--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,8 @@
     "paths": {
       "@ui": ["components/ui"],
       "@ui/*": ["components/ui/*"],
+      "@providers": ["components/providers"],
+      "@providers/*": ["components/providers/*"],
       "@_types/*": ["types/*"] 
     }
   },
