--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "1.0.6",
     "@metamask/providers": "^10.2.1",
     "@next/font": "13.1.1",
+    "@openzeppelin/contracts": "^4.8.0",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
